<resources>
    <string name="app_name">LoginApiApp</string>
    <string name="logo">Logo</string>
    <string name="log_in">Log In</string>
    <string name="email_or_phone_number">Email Or Mobile</string>
    <string name="password">Password</string>
    <string name="password_is_required">Password is required</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="email_is_required">Email or Mobile is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>