<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorbackground"
            tools:context=".view.main.MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iv_applogo_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/logo"
                android:textAllCaps="true"
                android:textColor="@color/colortext"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatTextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_emailormobile_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/email_or_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/iv_applogo_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_emailormobile_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_box"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textEmailAddress"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tverror_emailormobile_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_cut_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_11sdp"
                android:text="@string/email_is_required"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/til_emailormobile_view">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_viewlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/background_box"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/tverror_emailormobile_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_box"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textPassword"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tverror_password_viewlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_cut_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_11sdp"
                android:text="@string/password_is_required"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/til_password_viewlogin">

            </androidx.appcompat.widget.AppCompatTextView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="@dimen/_9sdp"
                android:text="@string/log_in"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorbgbutton"
                app:cornerRadius="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tverror_password_viewlogin">

            </com.google.android.material.button.MaterialButton>

            <ProgressBar
                android:id="@+id/progressbar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorgray"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgotpassword_viewlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/open_sans_bold"
                android:padding="@dimen/_2sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorgraytext"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorpurpulewhite"
                android:padding="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/new_user_create_account"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="@color/colorbgbutton"
                    app:cornerRadius="@dimen/_3sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>